@@ -1,5 +1,8 @@
 package com.example.channel.service.imlp;
 
+import com.example.channel.command.undo.CrudCommand;
+import com.example.channel.config.command.CommandManager;
+import com.example.channel.config.command.CommandResult;
 import com.example.channel.dto.nodeDto.CreateNodeDto;
 import com.example.channel.dto.nodeDto.CreateNodeResponse;
 import com.example.channel.dto.nodeDto.NodeDto;
@@ -14,6 +17,7 @@ import com.example.channel.repository.NodeRepository;
 import com.example.channel.repository.ParamRepository;
 import com.example.channel.repository.TemplateRepository;
 import com.example.channel.service.NodeService;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
@@ -25,100 +29,135 @@ import java.util.List;
 @Service
 @RequiredArgsConstructor
 public class NodeServiceImpl implements NodeService {
+
     private final NodeRepository nodeRepository;
     private final DescriptionRepository descriptionRepository;
     private final ParamRepository paramRepository;
     private final TemplateRepository templateRepository;
     private final NodeMapper nodeMapper;
+    private final CommandManager commandManager;
+    private final ObjectMapper mapper;
 
-    @Override
-    public void deleteNode(Long id) {
-        nodeRepository.deleteById(id);
-    }
-
-    @Override
     @Transactional
-    public void deleteNodeByIdNode(String idNode) {
-        nodeRepository.deleteNodeByIdNode(idNode);
-    }
-
-
-    @Override
-    public CreateNodeResponse createNode(CreateNodeDto createNodeDTO) {
-        CreateNodeResponse response = new CreateNodeResponse();
-        validateNodeType(createNodeDTO.getType());
+    public CreateNodeResponse createNode(CreateNodeDto createNodeDTO, Long userId) {
 
         Node node = nodeMapper.toEntity(createNodeDTO);
-        Node savedNode = nodeRepository.save(node);
-        savedNode.updateIdNode();
-        boolean isParent = "cha".equals(createNodeDTO.getType());
-        response.setNodeDTO(nodeMapper.toDto(savedNode, isParent));
-        List<Long> paramIds = new ArrayList<>();
-        templateRepository.findByNameWithParams(createNodeDTO.getType()).getTemplateParams()
-                .stream().forEach(param ->
-                paramIds.add(param.getDescriptionId())
+
+        CrudCommand<Node> nodeCommand = new CrudCommand<>(
+                userId,
+                CrudCommand.Action.CREATE,
+                nodeRepository,
+                mapper,
+                node,
+                null,
+                Node::getId
         );
-//        List<Long> paramIds = NodeTemplates.getTemplateParams(createNodeDTO.getType());
+
+        CommandResult<Node> nodeResult = commandManager.execute(nodeCommand);
+        Node savedNode = nodeResult.getResult();
+
+        CreateNodeResponse response = new CreateNodeResponse();
+        response.setNodeDTO(nodeMapper.toDto(savedNode));
+
+        List<Long> paramIds = templateRepository
+                .findByNameWithParams(createNodeDTO.getType())
+                .getTemplateParams()
+                .stream()
+                .map(p -> p.getDescriptionId())
+                .toList();
+
         List<Description> descriptions = descriptionRepository.findAll();
 
-        if (paramIds != null) {
-            for (Long paramId : paramIds) {
-                NodeParam nodeParam = new NodeParam();
+        for (Long paramId : paramIds) {
 
-                nodeParam.setIdType(paramId);
-                nodeParam.setNode(savedNode);
-                nodeParam.setValue("");
+            NodeParam nodeParam = new NodeParam();
+            nodeParam.setIdType(paramId);
+            nodeParam.setNode(savedNode);
+            nodeParam.setValue("");
 
-                NodeParam savedParam = paramRepository.save(nodeParam);
-                ParamDto dto = nodeMapper.toDto(savedParam,descriptions);
+            CrudCommand<NodeParam> paramCommand = new CrudCommand<>(
+                    userId,
+                    CrudCommand.Action.CREATE,
+                    paramRepository,
+                    mapper,
+                    nodeParam,
+                    null,
+                    NodeParam::getId
+            );
 
-                response.getParams().add(dto);
-            }
+            CommandResult<NodeParam> paramResult = commandManager.execute(paramCommand);
+
+            ParamDto dto = nodeMapper.toDto(paramResult.getResult(), descriptions);
+            response.getParams().add(dto);
         }
 
         return response;
     }
 
-    private void validateNodeType(String type) {
-        if (!List.of("dev", "sub", "cha").contains(type)) {
-            throw new IllegalArgumentException("Node type must be 'dev', 'sub' or 'cha'");
+    @Transactional
+    public void deleteNodeByIdNode(String idNode, Long userId) {
+
+        Node node = nodeRepository.findByIdNode(idNode)
+                .orElseThrow(() -> new IllegalArgumentException("Node not found: " + idNode));
+
+        List<NodeParam> params = paramRepository.findByNode(node)
+                .orElse(Collections.emptyList());
+
+        for (NodeParam param : params) {
+
+            CrudCommand<NodeParam> deleteParamCmd = new CrudCommand<>(
+                    userId,
+                    CrudCommand.Action.DELETE,
+                    paramRepository,
+                    mapper,
+                    param,
+                    null,
+                    NodeParam::getId
+            );
+
+            commandManager.execute(deleteParamCmd);
         }
+
+        CrudCommand<Node> deleteNodeCmd = new CrudCommand<>(
+                userId,
+                CrudCommand.Action.DELETE,
+                nodeRepository,
+                mapper,
+                node,
+                null,
+                Node::getId
+        );
+
+        commandManager.execute(deleteNodeCmd);
     }
 
     @Override
     public NodeResponse getFullHierarchy(String site, String project) {
+
         NodeResponse response = new NodeResponse();
 
-        List<Node> devices = nodeRepository.findDevicesBySiteAndProject(site, project);
-        List<Node> allNodes = new ArrayList<>(devices);
-        List<Node> subtypes = findByParentIds(devices);
-        allNodes.addAll(subtypes);
-        List<Node> channels = findByParentIds(subtypes);
-        allNodes.addAll(channels);
+        String rootPath = site + "." + project;
 
-        List<String> nodesIds = allNodes.stream().map(Node::getIdNode).toList();
+        List<Node> allNodes = nodeRepository.findByIdNodeStartingWith(rootPath);
+
+        List<String> nodesIds = allNodes.stream()
+                .map(Node::getIdNode)
+                .toList();
 
         List<Description> descriptions = descriptionRepository.findAll();
 
         List<NodeParam> allParams = paramRepository.findParamsByNodeIds(nodesIds);
 
         allParams.forEach(param -> {
-           ParamDto dto = nodeMapper.toDto(param,descriptions);
-           response.getParams().add(dto);
+            ParamDto dto = nodeMapper.toDto(param, descriptions);
+            response.getParams().add(dto);
         });
 
-        allNodes.forEach(node ->{
+        allNodes.forEach(node -> {
             NodeDto dto = nodeMapper.toDto(node);
             response.getNodes().add(dto);
         });
+
         return response;
     }
-
-    // Универсальный метод для поиска дочерних узлов
-    private List<Node> findByParentIds(List<Node> parents) {
-        if (parents.isEmpty()) return Collections.emptyList();
-        List<String> parentIds = parents.stream().map(Node::getIdNode).toList();
-        return nodeRepository.findByParentIds(parentIds);
-    }
-
 }
